--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
         <div class="contact-content">
             <div class="contact-line">
                 <i class="fas fa-headset"></i>
-                <span>للدعم الفني: support@system.com | هاتف: +123 456 789</span>
+                <span></span>
             </div>
         </div>
     </div>
